Refactor: 메일 목록 정렬 기능 구현 완료